# agda-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
agda_mcp/: server.py
test/: Test.agda  test_all_tools.py
