[project]
name = "agda-mcp"
version = "0.1.0"
description = "MCP server for Agda — type checking, go-to-definition, case split, auto, and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
agda-mcp = "agda_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
